<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/editCover"
        android:icon="@drawable/camera"
        android:title="@string/edit_cover"
        app:showAsAction="never" />

    <item
        android:id="@+id/editProfile"
        android:icon="@drawable/camera"
        android:title="@string/edit_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/editName"
        android:icon="@drawable/edit"
        android:title="@string/edit_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/editDetils"
        android:icon="@drawable/edit"
        android:title="@string/edit_detils"
        app:showAsAction="never" />

</menu>